--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,4 @@ set -g default-terminal "screen-256color"
 set -g status-bg black
 set -g status-fg white
 set-window-option -g window-status-last-attr dim
+set -g mouse on
